--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,13 @@ file(MAKE_DIRECTORY ${BOOST_BUILD_DIR})
 file(MAKE_DIRECTORY ${BOOST_INSTALL_DIR})
 
 execute_process(COMMAND ${BOOST_BOOTSTRAP} WORKING_DIRECTORY ${BOOST_BUILD_DIR})
-execute_process(COMMAND 
-	${BOOST_B2} 
-        --prefix=${BOOST_INSTALL_DIR} --build-type=complete --layout=tagged 
-        --build-dir=${BOOST_BUILD_DIR} -j8 threading=multi runtime-link=shared install
-	WORKING_DIRECTORY ${BOOST_SOURCES_DIR}
-)
+
+# execute_process(COMMAND 
+#	${BOOST_B2} 
+#        --prefix=${BOOST_INSTALL_DIR} --build-type=complete --layout=tagged 
+#        --build-dir=${BOOST_BUILD_DIR} -j8 threading=multi runtime-link=shared install
+#	WORKING_DIRECTORY ${BOOST_SOURCES_DIR}
+# )
 
 # --stagedir=${BOOST_STAGE_DIR}
 
@@ -32,16 +33,19 @@ file(GLOB my_srcs ./main.cpp)
 file(GLOB my_headers *.h)
 
 add_executable(${PROJECT_NAME} ${my_srcs} ${my_headers})
+include_directories("${BOOST_INSTALL_DIR}/include")
+link_directories("${BOOST_INSTALL_DIR}/lib")
+
+add_custom_target(
+    boost_build
+    COMMAND ${BOOST_B2} 
+        --prefix=${BOOST_INSTALL_DIR} --build-type=complete --layout=tagged 
+        --without-python 
+        --build-dir=${BOOST_BUILD_DIR} -j8 threading=multi runtime-link=shared install
+	WORKING_DIRECTORY ${BOOST_SOURCES_DIR}
+)
+add_dependencies(playwithhttp boost_build)
 
 
-# add_custom_target(
-#     boost_build
-#     COMMAND ${PROJECT_SOURCE_DIR}/third/boost/bootstrap.sh ${CMAKE_CURRENT_BINARY_DIR}/config.h WORKING_DIRECTORY ${boost_build_dir}
-# )
-# add_dependencies(playwithhttp boost_build)
-
-
-
-#target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_LIST_DIR}/third/boost/beast/include")
 
 #target_link_libraries(    ${PROJECT_NAME}  )
